# python-project-83

./: .flake8  .gitignore  Makefile  Makefile.bak  README.md  build.sh  database.sql  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: python-ci.yml  sonarcloud.yml
page_analyzer/: app.py  data_base.py  error_handlers.py  main.py  parser.py  routes.py  url_validator.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
