[project]
name = "hexlet-code"
version = "0.1.0"
description = "Анализатор страниц"
readme = "README.md"
authors = [{name = "pavel", email = "paveldidko@gmail.com"},]

packages = [
    {include = "page_analyzer"}
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^0.21.0"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"